[gd_scene load_steps=2 format=2]

[ext_resource path="res://Server.gd" type="Script" id=1]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 160.0
margin_top = 288.0
margin_right = 224.0
margin_bottom = 352.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 256.0
margin_top = 288.0
margin_right = 320.0
margin_bottom = 352.0
toggle_mode = true
pressed = true
text = "Auto"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 352.0
margin_top = 288.0
margin_right = 416.0
margin_bottom = 352.0
text = "Switch back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="toggled" from="Button2" to="." method="_on_Button2_toggled"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
